Added Some Styling And Some Functionalities

--- a/src/Components/Form.css
+++ b/src/Components/Form.css
@@ -23,8 +23,7 @@
     padding:20px;
     border-radius: 5px;
     width: 750px;
-    box-shadow: 4.0px 8.0px 8.0px hsl(0deg 0% 0% / 0.38);
-}
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;}
 .Title{
     text-align: center;
     margin-bottom: 20px;
@@ -36,3 +35,12 @@
 .nav{
     background-color: black;
 }
+#clearbutton{
+    background-color: green;
+    border: none;
+    width: 100px;
+    background-color: red;
+}
+.has-error .form-control {
+    border-color: red;
+  }
