--- a/src/Components/Form.css
+++ b/src/Components/Form.css
@@ -3,26 +3,34 @@
     width: 100%;
     
 }
+#name,#startDate,#reminderDate{
+    width:150%;
+}
+#dropdownbutton{
+    
+}
 .form-control{
-    width: 100%;
+    width: 50%;
+    height:40px
 }
 .form-group mb-3{
     margin-bottom: 20px;
     width: 100%;
+    height:100px;
+
 }
 .FormBox{
     display: flex;
     justify-content:center; 
     align-items: center; 
     height: 100vh;
-    width:750px;
-    
+    width :800px;
 }
 .FormBorder{
     border:2px solid black;
     padding:20px;
     border-radius: 5px;
-    width: 750px;
+    width: 800px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;}
 .Title{
     text-align: center;
@@ -41,12 +49,7 @@
     width: 100px;
     background-color: red;
 }
-.has-error .form-control {
-    border-color: red;
-  }
-
 .main-container {
-
     margin-top: 300px;
     margin-bottom: 300px;
 }
@@ -55,3 +58,6 @@
     flex-direction: column;
     align-items: center;
 }
+.has-error .form-control {
+    border-color: red;
+  }
