--- a/src/Components/Form.css
+++ b/src/Components/Form.css
@@ -1,63 +1,102 @@
 .form-group {
     margin-bottom: 20px;
     width: 100%;
-    
-}
-#name,#startDate,#reminderDate{
-    width:150%;
-}
-#dropdownbutton{
-    
-}
-.form-control{
-    width: 50%;
-    height:40px
-}
-.form-group mb-3{
-    margin-bottom: 20px;
-    width: 100%;
-    height:100px;
 
 }
-.FormBox{
-    display: flex;
-    justify-content:center; 
-    align-items: center; 
-    height: 100vh;
-    width :800px;
+
+#name,
+#startDate,
+#reminderDate {
+    width: 150%;
 }
-.FormBorder{
-    border:2px solid black;
-    padding:20px;
+
+#dropdownbutton {}
+
+.form-control {
+    width: 50%;
+    height: 40px
+}
+
+.form-group mb-3 {
+    margin-bottom: 20px;
+    width: 100%;
+    height: 100px;
+
+}
+
+#dropdownbutton {
+    margin-right: 570px;
+    width: 100%;
+}
+
+.spinner-container {
+    position: absolute;
+  }
+  
+  .spinner-container #spinner {
+    position: absolute;
+    top: -50px !important;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+#successmsg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 800px;
+}
+
+.FormBox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 800px;
+}
+
+.FormBorder {
+    border: 2px solid black;
+    padding: 20px;
     border-radius: 5px;
     width: 800px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;}
-.Title{
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.Title {
     text-align: center;
     margin-bottom: 20px;
     margin-top: 10px;
 }
-.labelcoach{
+
+.labelcoach {
     padding-right: 579px;
 }
-.nav{
+
+.nav {
     background-color: black;
 }
-#clearbutton{
+
+#clearbutton {
     background-color: green;
     border: none;
     width: 100px;
+    font-weight: bold;
     background-color: red;
 }
+
 .main-container {
     margin-top: 300px;
     margin-bottom: 300px;
 }
-.Forms{
-    display:flex;
+
+.Forms {
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .has-error .form-control {
     border-color: red;
-  }
+    font-weight: bold;
+}
