--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -1,23 +1,54 @@
-.LoginContainer {
+.login-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
     height: 100vh;
-    padding: 20px;
-}
+  }
 
-.form-control {
-    width: 400px;
-    height: 38px;
-    padding: 10px;
-    margin: 5px 0;
+  
+  .login-box {
+    padding: 40px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgb(254, 153, 37); /* Border shadow */
+    max-width: 400px;
+    width: 100%;
+  }
+  
+  .logo-container {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .logo {
+    max-width: 100px; /* Adjust size as needed */
+    height: auto; /* Maintain aspect ratio */
+  }
+  
+  .form-group {
+    margin-bottom: 20px;
+  }
+  
+  .input-box {
+    width: 100%;
+    padding: 10px 15px;
+    border: 1px solid #000000;
+    border-radius: 4px;
     box-sizing: border-box;
-}
-
-#labelemail{
-   padding:20px;
-}
-#labelpassword {
-    padding:20px;
-}
+  }
+ 
+  .btn-primary {
+    width: 100%;
+    padding: 10px 15px;
+    border: none;
+ /*6   background-color: rgb(10, 131, 10);
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;*/
+  }
+  /*
+  .btn-primary:hover {
+    background-color: rgb(68, 200, 23);
+  }*/
+  
