--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('https://img.freepik.com/vecteurs-premium/illustration-vectorielle-papier-art-fond_485157-306.jpg?w=1060');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
